# meo

./: .gitignore  README.md  claude.md  pyproject.toml  requirements.txt
.meo/: config.yaml
src/meo/: __init__.py  __main__.py  cli.py
src/meo/core/: __init__.py  ai_edit.py  ai_edit_streaming.py  chunk_parser.py  config.py  git_ops.py  output_generator.py  session.py  sidecar.py  text_replacer.py
src/meo/models/: __init__.py  chunk.py  config.py  direction.py  project.py  session.py
src/meo/presets/: __init__.py  directions.py
src/meo/tui/: __init__.py  app.py
src/meo/tui/screens/: __init__.py  directions.py  file_picker.py  processing.py  review.py  review_v2.py  selection.py
src/meo/tui/widgets/: __init__.py  confirm_modal.py
test_docs/: sample.md  sample.md.meo.yaml  video_script.md  video_script.md.meo.yaml
tests/: __init__.py  test_models.py
